// EntryDetails.h
#pragma once
#include "FileLibrary.h"
#include <filesystem>
/* EntryDetails - 文件/目录的元数据容器
 *
 * 功能:
 *   存储单个文件或目录的基本属性
 *   包括名称、大小、类型和完整路径
 *   用于目录遍历和二进制序列化过程中传递信息
 */
namespace Y_flib
{
class EntryDetails
{
private:
    std::string name;
    Y_flib::FileNameSize sizeOfName;
    Y_flib::FileSize fileSize;
    bool isFile;
    std::filesystem::path fullPath;

public:
    /* 构造函数，初始化文件/目录元数据 */
    EntryDetails(std::string name, Y_flib::FileNameSize sizeOfName, Y_flib::FileSize fileSize, bool isFile, std::filesystem::path fullPath)
        : name(std::move(name)), sizeOfName(sizeOfName), fileSize(fileSize), isFile(isFile), fullPath(fullPath) {}

    /* 获取文件/目录名称 */
    std::string getName() const { return name; }

    /* 获取完整路径 */
    std::filesystem::path getFullPath() const { return fullPath; }

    /* 获取名称长度 */
    Y_flib::FileNameSize getSizeOfName() const { return sizeOfName; }

    /* 获取文件大小 */
    Y_flib::FileSize getFileSizeInDetails() const { return fileSize; }

    /* 检查是否为文件（false表示目录） */
    bool getIsFile() const { return isFile; }

    /* 更新文件大小 */
    void setFileSize(Y_flib::FileSize fileSize) { this->fileSize = fileSize; }
};

/* FilePath - 输入输出路径管理器
 *
 * 功能:
 *   管理源路径和目标输出路径
 *   为文件扫描和处理流程提供路径信息
 */
class FilePath
{
private:
    std::filesystem::path outputFilePath;
    std::filesystem::path filePathToScan;

public:
    /* 默认构造函数 */
    FilePath() {}

    /* 设置输出文件路径 */
    void setOutputFilePath(const std::filesystem::path outputFilePath)
    {
        this->outputFilePath = outputFilePath;
    }

    /* 用于重新设置要扫描的源路径，复用对象 */
    void setFilePathToScan(const std::filesystem::path filePathToScan)
    {
        this->filePathToScan = filePathToScan;
    }

    /* 获取输出文件路径 */
    std::filesystem::path getOutputFilePath() const { return outputFilePath; }

    /* 获取要扫描的源路径 */
    std::filesystem::path getFilePathToScan() const { return filePathToScan; }
};
} // namespace Y_flib
